additional anime data

--- a/utils/crawler/mal-scraper.ipynb
+++ b/utils/crawler/mal-scraper.ipynb
@@ -27,14 +27,14 @@
    "source": [
     "jikan = Jikan()  #Unofficial MAL API\n",
     "\n",
-    "try_anime_ids = list(range(40000))  # set of ids to request info for\n",
-    "savePath = 'animeData.csv'\n",
+    "try_anime_ids = list(range(43000))  # set of ids to request info for\n",
+    "savePath = 'anime.csv'\n",
     "\n",
     "## RATE LIMITING ##\n",
-    "# callsPerPeriod = 1\n",
-    "# PERIOD = 4          # in seconds\n",
-    "callsPerPeriod = 2\n",
-    "PERIOD = 1          # in seconds\n",
+    "callsPerPeriod = 1\n",
+    "PERIOD = 4          # in seconds\n",
+    "# callsPerPeriod = 2\n",
+    "# PERIOD = 1          # in seconds\n",
     "\n",
     "\n",
     "@RateLimiter(max_calls=callsPerPeriod, period=PERIOD)\n",
@@ -54,12 +54,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd2f9308d96f4c55ba0f309760756821",
+       "model_id": "4c1ed9c5da284eee8a6e394eaf87eb67",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=40000.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=43000.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -185,23 +185,40 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>https://cdn.myanimelist.net/images/anime/1796/...</td>\n",
-       "      <td>Witch Hunter Robin</td>\n",
-       "      <td>Witch Hunter Robin</td>\n",
-       "      <td>Witch Hunter ROBIN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/7/203...</td>\n",
+       "      <td>Trigun</td>\n",
+       "      <td>Trigun</td>\n",
+       "      <td>トライガン</td>\n",
        "      <td>TV</td>\n",
        "      <td>26.0</td>\n",
        "      <td>Finished Airing</td>\n",
        "      <td>PG-13 - Teens 13 or older</td>\n",
-       "      <td>7.29</td>\n",
-       "      <td>Witches are individuals with special powers li...</td>\n",
-       "      <td>Summer 2002</td>\n",
-       "      <td>Tuesdays at Unknown</td>\n",
-       "      <td>[Action, Magic, Police, Supernatural, Drama, M...</td>\n",
+       "      <td>8.25</td>\n",
+       "      <td>Vash the Stampede is the man with a $$60,000,0...</td>\n",
+       "      <td>Spring 1998</td>\n",
+       "      <td>Thursdays at 01:15 (JST)</td>\n",
+       "      <td>[Action, Sci-Fi, Adventure, Comedy, Drama, Sho...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/1796/...</td>\n",
+       "      <td>Witch Hunter Robin</td>\n",
+       "      <td>Witch Hunter Robin</td>\n",
+       "      <td>Witch Hunter ROBIN (ウイッチハンターロビン)</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Finished Airing</td>\n",
+       "      <td>PG-13 - Teens 13 or older</td>\n",
+       "      <td>7.28</td>\n",
+       "      <td>Witches are individuals with special powers li...</td>\n",
+       "      <td>Summer 2002</td>\n",
+       "      <td>Tuesdays at Unknown</td>\n",
+       "      <td>[Action, Mystery, Police, Supernatural, Drama,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>8</td>\n",
        "      <td>https://cdn.myanimelist.net/images/anime/7/215...</td>\n",
        "      <td>Bouken Ou Beet</td>\n",
@@ -211,28 +228,11 @@
        "      <td>52.0</td>\n",
        "      <td>Finished Airing</td>\n",
        "      <td>PG - Children</td>\n",
-       "      <td>6.99</td>\n",
+       "      <td>6.98</td>\n",
        "      <td>It is the dark century and the people are suff...</td>\n",
        "      <td>Fall 2004</td>\n",
        "      <td>Thursdays at 18:30 (JST)</td>\n",
        "      <td>[Adventure, Fantasy, Shounen, Supernatural]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>15</td>\n",
-       "      <td>https://cdn.myanimelist.net/images/anime/12/66...</td>\n",
-       "      <td>Eyeshield 21</td>\n",
-       "      <td>None</td>\n",
-       "      <td>アイシールド21</td>\n",
-       "      <td>TV</td>\n",
-       "      <td>145.0</td>\n",
-       "      <td>Finished Airing</td>\n",
-       "      <td>PG-13 - Teens 13 or older</td>\n",
-       "      <td>7.99</td>\n",
-       "      <td>Sena is like any other shy kid starting high s...</td>\n",
-       "      <td>Spring 2005</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>[Action, Sports, Comedy, Shounen]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -242,44 +242,44 @@
        "   mal_id                                          image_url  \\\n",
        "0       1  https://cdn.myanimelist.net/images/anime/4/196...   \n",
        "1       5  https://cdn.myanimelist.net/images/anime/1439/...   \n",
-       "2       7  https://cdn.myanimelist.net/images/anime/1796/...   \n",
-       "3       8  https://cdn.myanimelist.net/images/anime/7/215...   \n",
-       "4      15  https://cdn.myanimelist.net/images/anime/12/66...   \n",
+       "2       6  https://cdn.myanimelist.net/images/anime/7/203...   \n",
+       "3       7  https://cdn.myanimelist.net/images/anime/1796/...   \n",
+       "4       8  https://cdn.myanimelist.net/images/anime/7/215...   \n",
        "\n",
        "                             title            title_english  \\\n",
        "0                     Cowboy Bebop             Cowboy Bebop   \n",
        "1  Cowboy Bebop: Tengoku no Tobira  Cowboy Bebop: The Movie   \n",
-       "2               Witch Hunter Robin       Witch Hunter Robin   \n",
-       "3                   Bouken Ou Beet   Beet the Vandel Buster   \n",
-       "4                     Eyeshield 21                     None   \n",
+       "2                           Trigun                   Trigun   \n",
+       "3               Witch Hunter Robin       Witch Hunter Robin   \n",
+       "4                   Bouken Ou Beet   Beet the Vandel Buster   \n",
        "\n",
-       "       title_japanese   type  episodes           status  \\\n",
-       "0           カウボーイビバップ     TV      26.0  Finished Airing   \n",
-       "1      カウボーイビバップ 天国の扉  Movie       1.0  Finished Airing   \n",
-       "2  Witch Hunter ROBIN     TV      26.0  Finished Airing   \n",
-       "3              冒険王ビィト     TV      52.0  Finished Airing   \n",
-       "4            アイシールド21     TV     145.0  Finished Airing   \n",
+       "                     title_japanese   type  episodes           status  \\\n",
+       "0                         カウボーイビバップ     TV      26.0  Finished Airing   \n",
+       "1                    カウボーイビバップ 天国の扉  Movie       1.0  Finished Airing   \n",
+       "2                             トライガン     TV      26.0  Finished Airing   \n",
+       "3  Witch Hunter ROBIN (ウイッチハンターロビン)     TV      26.0  Finished Airing   \n",
+       "4                            冒険王ビィト     TV      52.0  Finished Airing   \n",
        "\n",
        "                           rating  score  \\\n",
        "0  R - 17+ (violence & profanity)   8.79   \n",
        "1  R - 17+ (violence & profanity)   8.39   \n",
-       "2       PG-13 - Teens 13 or older   7.29   \n",
-       "3                   PG - Children   6.99   \n",
-       "4       PG-13 - Teens 13 or older   7.99   \n",
+       "2       PG-13 - Teens 13 or older   8.25   \n",
+       "3       PG-13 - Teens 13 or older   7.28   \n",
+       "4                   PG - Children   6.98   \n",
        "\n",
        "                                            synopsis    premiered  \\\n",
        "0  In the year 2071, humanity has colonized sever...  Spring 1998   \n",
        "1  Another day, another bounty—such is the life o...         None   \n",
-       "2  Witches are individuals with special powers li...  Summer 2002   \n",
-       "3  It is the dark century and the people are suff...    Fall 2004   \n",
-       "4  Sena is like any other shy kid starting high s...  Spring 2005   \n",
+       "2  Vash the Stampede is the man with a $$60,000,0...  Spring 1998   \n",
+       "3  Witches are individuals with special powers li...  Summer 2002   \n",
+       "4  It is the dark century and the people are suff...    Fall 2004   \n",
        "\n",
        "                  broadcast                                             genres  \n",
        "0  Saturdays at 01:00 (JST)  [Action, Adventure, Comedy, Drama, Sci-Fi, Space]  \n",
        "1                      None            [Action, Drama, Mystery, Sci-Fi, Space]  \n",
-       "2       Tuesdays at Unknown  [Action, Magic, Police, Supernatural, Drama, M...  \n",
-       "3  Thursdays at 18:30 (JST)        [Adventure, Fantasy, Shounen, Supernatural]  \n",
-       "4                   Unknown                  [Action, Sports, Comedy, Shounen]  "
+       "2  Thursdays at 01:15 (JST)  [Action, Sci-Fi, Adventure, Comedy, Drama, Sho...  \n",
+       "3       Tuesdays at Unknown  [Action, Mystery, Police, Supernatural, Drama,...  \n",
+       "4  Thursdays at 18:30 (JST)        [Adventure, Fantasy, Shounen, Supernatural]  "
       ]
      },
      "execution_count": 4,
